force-app/main/default/objects/custom_create167__c/custom_create167__c.object-meta.xml
<CustomObject>
    <label>Custom created object167</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects167</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>