force-app/main/default/objects/custom_create167__c/fields/custom_create_167field527__c.field-meta.xml
<CustomField>
    <fullName>custom_create_167field527__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 167field527</label>
    <type>Checkbox</type>
</CustomField>